# kgrapher

./: CMakeLists.txt  README.md  expressionparser.cpp  expressionparser.h  graphwidget.cpp  graphwidget.h  graphwidget3d.cpp  graphwidget3d.h  kgrapher.desktop  main.cpp  mainwindow.cpp  mainwindow.h
